<resources>
    <string name="app_name">prenApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_client_fragment">Home Client Fragment</string>
    <string name="cart_fragment">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_passsword">Confirm Passsword</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="city">City</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="product_name">Product Name:</string>
    <string name="account">Account</string>
    <string name="order_id">Order ID:</string>
    <string name="date">Date:</string>
    <string name="orders">Orders</string>
    <string name="client_account_title">Account\nManagment</string>
</resources>