<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupProActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:gravity="clip_horizontal"
        android:text="Sign up"
        android:textSize="50dp"/>

    <EditText
        android:id="@+id/firstname_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/lastname_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/lastname" />


    <EditText
        android:id="@+id/email_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/contact_email" />

    <EditText
        android:id="@+id/phone_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/contact_phone" />

    <EditText
        android:id="@+id/address_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/password_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm_password_pro"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/confirm_passsword" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/form_homepro_btn"
        android:text="SING UP"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

</LinearLayout>