<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:gravity="clip_horizontal"
        android:text="Log in"
        android:layout_marginStart="20dp"
        android:textColor="@color/primary"
        android:textSize="50dp"
        android:id="@+id/title_login"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/title_login"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/HorizontalLine"
        android:id="@+id/line_login"
        />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/line_login"
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:hint="@string/email" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/email_login"
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/password_login"
        app:layout_constraintTop_toBottomOf="@id/password_login" />


    <Button
        android:id="@+id/access_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="log in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />



</androidx.constraintlayout.widget.ConstraintLayout>